--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,37 @@
 name: ark_module_course
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+publish_to: "none"
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
+  ark_module_setup:
+    path: ../ark_module_setup
+
+  cached_network_image: ^3.1.0
+  connectivity_wrapper:
+    git:
+      url: https://github.com/pkeliat/connectivity_wrapper.git
+  dartz: ^0.10.1
+  dio: ^4.0.6
+  flutter_html: ^2.1.4
+  flutter_rating_bar: ^4.0.0
+  flutter_svg: ^0.22.0
+  get: ^4.6.5
+  intl: ^0.17.0
+  lottie: ^1.3.0
+  path_provider: ^2.0.10
+  shared_preferences: ^2.0.8
+  shimmer: ^2.0.0
+  url_launcher: ^6.0.12
+  youtube_player_iframe:
+    git:
+      url: https://github.com/pkeliat/youtube_player_flutter.git
+      path: packages/youtube_player_iframe
+
   flutter:
     sdk: flutter
 
