--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
       url: https://github.com/riyanurdiansyah/ark_module_setup.git
       ref: master
 
+  # ark_module_setup:
+  #   path: ../ark_module_setup
+
   cached_network_image: ^3.1.0
   connectivity_wrapper:
     git:
