--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,10 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  ark_module_setup:
-    git:
-      url: https://github.com/riyanurdiansyah/ark_module_setup.git
-      ref: master
+  # ark_module_setup:
+  #   git:
+  #     url: https://github.com/riyanurdiansyah/ark_module_setup.git
+  #     ref: master
 
   # ark_module_setup:
   #   path: ../ark_module_setup
@@ -22,12 +22,16 @@ dependencies:
       url: https://github.com/pkeliat/connectivity_wrapper.git
   dartz: ^0.10.1
   dio: ^4.0.6
+  equatable: ^2.0.5
+  firebase_analytics: ^9.1.9
   flutter_html: ^2.1.4
   flutter_rating_bar: ^4.0.0
   flutter_svg: ^0.22.0
+  fluttertoast: ^8.0.9
   get: ^4.6.5
   intl: ^0.17.0
   lottie: ^1.3.0
+  mixpanel_flutter: ^1.5.1
   path_provider: ^2.0.10
   shared_preferences: ^2.0.8
   shimmer: ^2.0.0
