--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   fluttertoast: ^8.0.9
   get: ^4.6.5
   intl: ^0.17.0
+  expandable: ^5.0.1
   lottie: ^1.3.0
   mixpanel_flutter: ^1.5.1
   path_provider: ^2.0.10
@@ -54,11 +55,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
