--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.0.12
   flutter_sticky_header: ^0.6.4
   font_awesome_flutter: ^10.1.0
+  webview_flutter: ^2.1.1
   youtube_player_iframe:
     git:
       url: https://github.com/pkeliat/youtube_player_flutter.git
@@ -46,6 +47,7 @@ dependencies:
 
   flutter:
     sdk: flutter
+  timeago: ^3.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
