--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_sticky_header: ^0.6.4
   font_awesome_flutter: ^10.1.0
   webview_flutter: ^2.1.1
+  share: ^2.0.4
   youtube_player_iframe:
     git:
       url: https://github.com/pkeliat/youtube_player_flutter.git
